[gd_scene load_steps=2 format=3 uid="uid://bq04mvmleflmo"]

[ext_resource type="Script" path="res://CreateAccount.gd" id="1_gqj23"]

[node name="CreateAccount" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gqj23")

[node name="Username" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 506.0
offset_top = 192.0
offset_right = 662.0
offset_bottom = 228.0
placeholder_text = "Username"

[node name="Password" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 502.0
offset_top = 280.0
offset_right = 660.0
offset_bottom = 331.0
placeholder_text = "Password"

[node name="ConfirmPassword" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 503.0
offset_top = 350.0
offset_right = 658.0
offset_bottom = 412.0
placeholder_text = "Confirm Password"

[node name="Create" type="Button" parent="."]
layout_mode = 0
offset_left = 517.0
offset_top = 479.0
offset_right = 644.0
offset_bottom = 510.0
text = "Create Account"

[node name="SystemMessage" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.0
offset_top = -283.0
offset_right = 208.0
offset_bottom = -155.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1

[connection signal="pressed" from="Create" to="." method="_on_opret_pressed"]
